--- a/FE/backend/src/app/components/menus/create-menu/create-menu.component.html
+++ b/FE/backend/src/app/components/menus/create-menu/create-menu.component.html
@@ -4,26 +4,97 @@
         <div class="col-sm-12">
             <div class="card">
                 <div class="card-header">
-                    <h5>Add Menu</h5>
+                    <h5>Sub 
+                        Categories Lists</h5>
                 </div>
                 <div class="card-body">
-                    <form class="needs-validation">
-                        <div class="form-group row">
-                            <label for="validationCustom0" class="col-xl-3 col-md-4"><span>*</span> Menu Name</label>
-                            <input class="form-control col-md-8" id="validationCustom0" type="text" required="">
-                        </div>
-                        <div class="form-group row">
-                            <label class="col-xl-3 col-md-4">Status</label>
-                            <div class="checkbox checkbox-primary col-xl-9 col-md-8">
-                                <input id="checkbox-primary-2" type="checkbox" data-original-title="" title="">
-                                <label for="checkbox-primary-2">Enable the Menu</label>
-                            </div>
-                        </div>
-                        <button type="button" class="btn btn-primary">Save</button>
-                    </form>
+                    <div class="custom-datatable">
+                        <button class="btn btn-primary mr-1 mb-3" style="float: right;" (click)="open(content)">Create</button>
+                        <div class="clearfix"></div>
+                        <nz-table #table [nzData]="subcategories" nzTableLayout="fixed">
+                            <thead>
+                                <tr>
+                                  <th nzWidth="20%">Name</th>
+                                  <th nzWidth="20%">Title</th>
+                                  <th nzWidth="50%">Description</th>
+                                  <th nzWidth="10%">Products</th>
+                                  <th nzWidth="10%">Category</th>
+                                  <th nzWidth="10%">Action</th>
+                                </tr>
+                              </thead>
+                              <tbody>
+                                <tr *ngFor="let data of table.data">
+                                    <ng-container>
+                                        <td nzWidth="20%">{{ data.name }}</td>
+                                        <td nzWidth="20%">{{ data.title }}</td>
+                                        <td nzWidth="50%">{{ data.description }}</td>
+                                        <td nzWidth="10%">{{ data.n_products }}</td>
+                                        <td nzWidth="10%">{{ data.category_name }}</td>
+                                        <td nzWidth="10%">
+                                          <a (click)="onEdit(content, data.id)"><i nz-icon nzType="edit" style="color: black; font-size: large;" nzTheme="outline"></i></a>
+                                          <i style="color: white;">OK</i>
+                                            <a
+                                              nz-popconfirm
+                                              nzPopconfirmTitle="Sure to delete?"
+                                              (nzOnConfirm)="onDelete(data.id)"
+                                            >
+                                            <i nz-icon nzType="delete" style="color: black; font-size: large;" nzTheme="outline"></i></a
+                                            >
+                                        </td>
+                                      </ng-container>
+                                </tr>
+                              </tbody>
+                        </nz-table>
+                    </div>
                 </div>
             </div>
         </div>
+
+        <ng-template #content let-modal>
+          <div class="modal-header">
+              <h5 class="modal-title f-w-600" id="exampleModalLabel">Add Sub Category</h5>
+              <button type="button" class="close" aria-label="Close"
+                  (click)="modal.dismiss('Cross click')">
+                  <span aria-hidden="true">&times;</span>
+              </button>
+          </div>
+          <div class="modal-body">
+              <form class="needs-validation" [formGroup]="subcategoryForm">
+                  <div class="form">
+                    <div class="form-group">
+                      <label for="validationCustom01" class="mb-1">Category :</label>
+                      <select
+                        class="custom-select"
+                        required=""
+                        formControlName="id_category"
+                      >
+                        <option value="">--Select--</option>
+                        <option *ngFor="let data of categories" [value]="data.id">
+                          {{ data.name }}
+                        </option>
+                      </select>
+                    </div>
+                      <div class="form-group">
+                          <label for="validationCustom01" class="mb-1">Name :</label>
+                          <input class="form-control" id="validationCustom01" type="text" formControlName="name">
+                      </div>
+                      <div class="form-group">
+                          <label for="validationCustom02" class="mb-1">Title :</label>
+                          <input class="form-control" id="validationCustom02" type="text" formControlName="title">
+                      </div>
+                      <div class="form-group">
+                          <label for="validationCustom01" class="mb-1">Description :</label>
+                          <textarea class="form-control text-area" id="validationCustom01" type="text" formControlName="description"></textarea>
+                      </div>
+                  </div>
+              </form>
+          </div>
+          <div class="modal-footer">
+              <button *ngIf="!isEdit" type="button" class="btn btn-primary" (click)="onCreate()">Save</button>
+              <button *ngIf="isEdit" type="button" class="btn btn-primary" (click)="onUpdate()">Save</button>
+              <button class="btn btn-secondary" type="button" data-dismiss="modal"
+                  (click)="modal.dismiss('Cross click')">Close</button>
+          </div>
+      </ng-template>
     </div>
 </div>
-<!-- Container-fluid Ends-->
