--- a/FE/backend/src/app/components/menus/list-menu/list-menu.component.html
+++ b/FE/backend/src/app/components/menus/list-menu/list-menu.component.html
@@ -4,27 +4,81 @@
         <div class="col-sm-12">
             <div class="card">
                 <div class="card-header">
-                    <h5>Menu Lists</h5>
+                    <h5>Categories Lists</h5>
                 </div>
                 <div class="card-body">
                     <div class="custom-datatable">
-                        <button class="btn btn-primary mr-1 mb-3" style="float: right;" >Delete</button>
+                        <button class="btn btn-primary mr-1 mb-3" style="float: right;" (click)="open(content)">Create</button>
                         <div class="clearfix"></div>
-                        <ngx-datatable class="bootstrap" [rows]="menus" [columnMode]="'force'" [headerHeight]="50"
-                            [footerHeight]="50" [rowHeight]="'auto'" [limit]="5" [selected]="selected"
-                            [selectionType]="'checkbox'" [selectAllRowsOnPage]="false" (select)='onSelect($event)'>
-                            <ngx-datatable-column [width]="30" [sortable]="false" [canAutoResize]="false"
-                                [draggable]="false" [resizeable]="false" [headerCheckboxable]="true"
-                                [checkboxable]="true">
-                                <button type="button" class="btn btn-primery">Delete</button>
-                            </ngx-datatable-column>
-                            <ngx-datatable-column name="Name"></ngx-datatable-column>
-                            <ngx-datatable-column name="Status"></ngx-datatable-column>
-                            <ngx-datatable-column prop="created on"></ngx-datatable-column>
-                        </ngx-datatable>
+                        <nz-table #table [nzData]="categories" nzTableLayout="fixed">
+                            <thead>
+                                <tr>
+                                  <th nzWidth="20%">Name</th>
+                                  <th nzWidth="20%">Title</th>
+                                  <th nzWidth="50%">Description</th>
+                                  <th  nzWidth="10%">Products</th>
+                                  <th  nzWidth="10%">Action</th>
+                                </tr>
+                              </thead>
+                              <tbody>
+                                <tr *ngFor="let data of table.data">
+                                    <ng-container>
+                                        <td nzWidth="20%">{{ data.name }}</td>
+                                        <td nzWidth="20%">{{ data.title }}</td>
+                                        <td nzWidth="50%">{{ data.description }}</td>
+                                        <td nzWidth="10%">{{ data.n_products }}</td>
+                                        <td nzWidth="10%">
+                                          <a (click)="onEdit(content, data.id)"><i nz-icon nzType="edit" style="color: black; font-size: large;" nzTheme="outline"></i></a>
+                                          <i style="color: white;">OK</i>
+                                            <a
+                                              nz-popconfirm
+                                              nzPopconfirmTitle="Sure to delete?"
+                                              (nzOnConfirm)="onDelete(data.id)"
+                                            >
+                                            <i nz-icon nzType="delete" style="color: black; font-size: large;" nzTheme="outline"></i></a
+                                            >
+                                        </td>
+                                      </ng-container>
+                                </tr>
+                              </tbody>
+                        </nz-table>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+<ng-template #content let-modal>
+  <div class="modal-header">
+      <h5 class="modal-title f-w-600" id="exampleModalLabel">Add Category</h5>
+      <button type="button" class="close" aria-label="Close"
+          (click)="modal.dismiss('Cross click')">
+          <span aria-hidden="true">&times;</span>
+      </button>
+  </div>
+  <div class="modal-body">
+      <form class="needs-validation" [formGroup]="categoryForm">
+          <div class="form">
+              <div class="form-group">
+                  <label for="validationCustom01" class="mb-1">Name :</label>
+                  <input class="form-control" id="validationCustom01" type="text" formControlName="name">
+              </div>
+              <div class="form-group">
+                  <label for="validationCustom02" class="mb-1">Title :</label>
+                  <input class="form-control" id="validationCustom02" type="text" formControlName="title">
+              </div>
+              <div class="form-group">
+                  <label for="validationCustom01" class="mb-1">Description :</label>
+                  <textarea class="form-control text-area" id="validationCustom01" type="text" formControlName="description"></textarea>
+              </div>
+          </div>
+      </form>
+  </div>
+  <div class="modal-footer">
+      <button *ngIf="!isEdit" type="button" class="btn btn-primary" (click)="onCreate()">Save</button>
+      <button *ngIf="isEdit" type="button" class="btn btn-primary" (click)="onUpdate()">Save</button>
+      <button class="btn btn-secondary" type="button" data-dismiss="modal"
+          (click)="modal.dismiss('Cross click')">Close</button>
+  </div>
+</ng-template>
